Fixed bug with searchbox/z-index

--- a/web/src/main/webapp/css/main.css
+++ b/web/src/main/webapp/css/main.css
@@ -58,21 +58,3 @@
   cursor: pointer;
   background-color: #c5dbff;
 }
-#ui-id-1{
-  z-index: 999999;
-}
-.ui-menu-item-wrapper {
-  overflow-wrap: break-word;
-  overflow: hidden;
-}
-
-.ui-autocomplete {
-  overflow-y: auto;
-  overflow-x: hidden;
-}
-
-.ui-state-active, .ui-widget-content .ui-state-active, .ui-widget-header .ui-state-active, a.ui-button:active, .ui-button:active, .ui-state-active.ui-button:hover
-{
-  color: #0056b3;
-  background-color: #dee2e6;
-}
